--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "android.example.com.squawker"
         minSdkVersion 16
@@ -38,9 +38,13 @@ dependencies {
     // Preferences Dependencies
     compile 'com.android.support:preference-v7:25.1.0'
 
-    // TODO (3) Add the Firebase libraries and apply the GPS plugin in this file. Make sure to save the
+    // COMPLETED (3) Add the Firebase libraries and apply the GPS plugin in this file. Make sure to save the
     // google.services.json file in the app folder. After syncing the changes, you should be able
     // to send a notification to your app using the Firebase console. The app must be in the
     // background!
+    compile 'com.google.firebase:firebase-core:11.8.0'
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
