--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,14 +35,23 @@
 
 
         <!-- Id service -->
-        <service android:name=".fcm.SquawkFirebaseInstanceIdService">
+        <service
+            android:name=".fcm.SquawkFirebaseInstanceIdService"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
 
-        <!-- TODO (4) Add your new service here, with an intent filter for action
+        <!-- COMPLETED (4) Add your new service here, with an intent filter for action
         com.google.firebase.MESSAGING_EVENT -->
+        <service
+            android:name=".fcm.SquawkFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
     </application>
 
